--- a/client/src/app/i18n/locales/zh-TW/app.json
+++ b/client/src/app/i18n/locales/zh-TW/app.json
@@ -11,7 +11,7 @@
     "enterprise": "企業版",
     "deploy": "部署",
     "learn": "學習",
-    "commerce": "Next.js 商業版",
+    "nextjsCommerce": "Next.js 商業版",
     "github": "GitHub",
     "search": {
       "button": "搜尋文件...",
@@ -28,6 +28,38 @@
         "pages": "頁面"
       }
     }
+  },
+  "footer": {
+    "resources": "資源",
+    "docs": "文件",
+    "supportPolicy": "支援政策",
+    "learn": "學習",
+    "showcase": "展示",
+    "blog": "部落格",
+    "team": "團隊",
+    "analytics": "分析",
+    "nextjsConf": "Next.js 大會",
+    "previews": "預覽",
+    "more": "更多",
+    "nextjsCommerce": "Next.js 商務",
+    "contactSales": "聯絡銷售",
+    "community": "社群",
+    "github": "GitHub",
+    "releases": "版本",
+    "telemetry": "遙測",
+    "governance": "治理",
+    "aboutVercel": "關於 Vercel",
+    "nextjsVercel": "Next.js + Vercel",
+    "openSourceSoftware": "開源軟體",
+    "bluesky": "Bluesky",
+    "x": "X",
+    "legal": "法律",
+    "privacyPolicy": "隱私政策",
+    "cookiePreferences": "Cookie 偏好設定",
+    "subscribeTitle": "訂閱我們的電子報",
+    "subscribeDescription": "隨時掌握最新的發布、功能、指南和案例研究。",
+    "subscribePlaceholder": "you@domain.com",
+    "subscribeButton": "訂閱"
   },
   "cookieBanner": {
     "message": "本網站使用追蹤技術。您可以選擇同意或拒絕使用這些技術。",
