--- a/client/src/app/i18n/locales/zh-TW/app.json
+++ b/client/src/app/i18n/locales/zh-TW/app.json
@@ -56,9 +56,9 @@
     "legal": "法律",
     "privacyPolicy": "隱私政策",
     "cookiePreferences": "Cookie 偏好設定",
+    "subscribeSuccess": "感謝您的訂閱！",
     "subscribeTitle": "訂閱我們的電子報",
     "subscribeDescription": "隨時掌握最新的發布、功能、指南和案例研究。",
-    "subscribePlaceholder": "you@domain.com",
     "subscribeButton": "訂閱"
   },
   "cookieBanner": {
